--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
 	crossorigin="anonymous"></script>
 
+	<link rel="stylesheet" type="text/css" href="animate.css">
 	<link rel="stylesheet" type="text/css" href="semantic.css">
 	<link rel="stylesheet" type="text/css" href="semantic.min.css">
 	
@@ -16,5 +17,35 @@
 </head>
 
 <body>
-	Hello
+	
+	<!-- Header -->
+	<section>
+		
+	</section>
+
+	<!-- Projects -->
+	<section>
+		
+	</section>
+
+	<!-- Skills -->
+	<section>
+		
+	</section>
+
+	<!-- About -->
+	<section>
+		
+	</section>
+
+	<!-- Resume/Contact -->
+	<section>
+		
+	</section>
+
+	<!-- Footer -->
+	<footer>
+		
+	</footer>
+
 </body>
