Added Header and Who I Am

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	crossorigin="anonymous"></script>
 
 	<link rel="stylesheet" type="text/css" href="animate.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="semantic.css">
 	<link rel="stylesheet" type="text/css" href="semantic.min.css">
 	
@@ -19,13 +20,41 @@
 <body>
 	
 	<!-- Header -->
-	<section>
+	<section class="ui center aligned segment header-holder no-border-view fadeInDown animated">
+
+		<h1 class="header-hello-large-text">Hello I'm</h1>
+		<h1 class="header-name-large-text">Justin Punzalan.</h1>
+
+
+		<h3>Frontend Web Developer / Sofware Engineer</h3>
+		<p><a href="#resume">My Resume</a></p>
 		
+
 	</section>
 
-	<!-- Projects -->
-	<section>
-		
+	<!-- Who I Am -->
+	<section class="ui center aligned segment no-border-view temp-background fadeInDown animated">
+
+		<h1 class="section-header">Who I Am</h1>
+
+		<div class="ui equal width grid container">
+			<div class="column">
+				<img class="ui medium circular image centered" src="http://lorempixel.com/output/city-q-c-620-620-8.jpg">
+				<h1>Robotics Mentor</h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+			</div>
+			<div class="column">
+				<img class="ui medium circular image centered" src="http://lorempixel.com/output/city-q-c-620-620-8.jpg">
+				<h1>Front End Web Developer</h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+			</div>
+			<div class="column">
+				<img class="ui medium circular image centered" src="http://lorempixel.com/output/city-q-c-620-620-8.jpg">
+				<h1>Hackathon Winner</h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+			</div>
+		</div>
+
 	</section>
 
 	<!-- Skills -->
