Added temp Skills content

--- a/index.html
+++ b/index.html
@@ -58,13 +58,127 @@
 	</section>
 
 	<!-- Skills -->
-	<section>
-		
+	<section class="ui center aligned segment no-border-view fadeInDown animated">
+
+		<h1 class="section-header">Skills</h1>
+
+		<div class="ui equal width grid container">
+			<div class="column">
+				
+				<!-- HTML -->
+				<div class="ui grid">
+			      	<div class="four wide column">
+			      		HTML
+			      	</div>
+
+			      	<div class="twelve wide column">
+			      		<div class="ui teal progress">
+							<div class="bar"></div>
+						</div>
+			      	</div>
+			    </div>
+
+				<!-- CSS -->
+				<div class="ui grid">
+			      	<div class="four wide column">
+			      		CSS
+			      	</div>
+
+			      	<div class="twelve wide column">
+			      		<div class="ui teal progress">
+							<div class="bar"></div>
+						</div>
+			      	</div>
+			    </div>
+
+				<!-- Javascript -->
+				<div class="ui grid">
+			      	<div class="four wide column">
+			      		Javascript
+			      	</div>
+
+			      	<div class="twelve wide column">
+			      		<div class="ui teal progress">
+							<div class="bar"></div>
+						</div>
+			      	</div>
+			    </div>
+
+				<!-- Emberjs -->
+				<div class="ui grid">
+			      	<div class="four wide column">
+			      		Emberjs
+			      	</div>
+
+			      	<div class="twelve wide column">
+			      		<div class="ui teal progress">
+							<div class="bar"></div>
+						</div>
+			      	</div>
+			    </div>
+
+			</div>
+
+			<div class="column">
+				<!-- HTML -->
+				<div class="ui grid">
+			      	<div class="four wide column">
+			      		HTML
+			      	</div>
+
+			      	<div class="twelve wide column">
+			      		<div class="ui teal progress">
+							<div class="bar"></div>
+						</div>
+			      	</div>
+			    </div>
+
+				<!-- CSS -->
+				<div class="ui grid">
+			      	<div class="four wide column">
+			      		CSS
+			      	</div>
+
+			      	<div class="twelve wide column">
+			      		<div class="ui teal progress">
+							<div class="bar"></div>
+						</div>
+			      	</div>
+			    </div>
+
+				<!-- Javascript -->
+				<div class="ui grid">
+			      	<div class="four wide column">
+			      		Javascript
+			      	</div>
+
+			      	<div class="twelve wide column">
+			      		<div class="ui teal progress">
+							<div class="bar"></div>
+						</div>
+			      	</div>
+			    </div>
+
+				<!-- Emberjs -->
+				<div class="ui grid">
+			      	<div class="four wide column">
+			      		Emberjs
+			      	</div>
+
+			      	<div class="twelve wide column">
+			      		<div class="ui teal progress">
+							<div class="bar"></div>
+						</div>
+			      	</div>
+			    </div>
+			</div>
+		</div>		
 	</section>
 
 	<!-- About -->
-	<section>
-		
+	<section class="ui center aligned segment no-border-view temp-background fadeInDown animated">
+
+		<h1 class="section-header">About Me</h1>
 	</section>
 
 	<!-- Resume/Contact -->
