--- a/index.html
+++ b/index.html
@@ -183,11 +183,36 @@
 		<div class="ui container">
 			<p class="bio-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 		</div>
+
+		<br>
 	</section>
 
 	<!-- Resume/Contact -->
-	<section>
-		
+	<section class="ui center aligned segment no-border-view">
+		<div class="ui equal width grid">
+			<div class="column teal">
+				<h1 class="contact-header">Resume</h1>
+
+			</div>
+			<div class="column green">
+		  		<h1 class="contact-header">Contact Me</h1>
+		  		<form class="ui form">
+				  <div class="field">
+				    <label>Name</label>
+				    <input type="text" name="name" placeholder="Your name">
+				  </div>
+				  <div class="field">
+				    <label>Email</label>
+				    <input type="email" name="email" placeholder="Your email">
+				  </div>
+				  <div class="field">
+				  	<label>Message</label>
+				  	<textarea rows="2" placeholder="Your message."></textarea>
+				  </div>
+				  <button class="ui button" type="submit">Submit</button>
+				</form>
+			</div>
+		</div>
 	</section>
 
 	<!-- Footer -->
