--- a/index.html
+++ b/index.html
@@ -67,110 +67,110 @@
 				
 				<!-- HTML -->
 				<div class="ui grid">
-			      	<div class="four wide column">
-			      		HTML
-			      	</div>
+					<div class="four wide column">
+						HTML
+					</div>
 
-			      	<div class="twelve wide column">
-			      		<div class="ui teal progress">
+					<div class="twelve wide column">
+						<div class="ui teal progress">
 							<div class="bar"></div>
 						</div>
-			      	</div>
-			    </div>
+					</div>
+				</div>
 
 				<!-- CSS -->
 				<div class="ui grid">
-			      	<div class="four wide column">
-			      		CSS
-			      	</div>
+					<div class="four wide column">
+						CSS
+					</div>
 
-			      	<div class="twelve wide column">
-			      		<div class="ui teal progress">
+					<div class="twelve wide column">
+						<div class="ui teal progress">
 							<div class="bar"></div>
 						</div>
-			      	</div>
-			    </div>
+					</div>
+				</div>
 
 				<!-- Javascript -->
 				<div class="ui grid">
-			      	<div class="four wide column">
-			      		Javascript
-			      	</div>
+					<div class="four wide column">
+						Javascript
+					</div>
 
-			      	<div class="twelve wide column">
-			      		<div class="ui teal progress">
+					<div class="twelve wide column">
+						<div class="ui teal progress">
 							<div class="bar"></div>
 						</div>
-			      	</div>
-			    </div>
+					</div>
+				</div>
 
 				<!-- Emberjs -->
 				<div class="ui grid">
-			      	<div class="four wide column">
-			      		Emberjs
-			      	</div>
+					<div class="four wide column">
+						Emberjs
+					</div>
 
-			      	<div class="twelve wide column">
-			      		<div class="ui teal progress">
+					<div class="twelve wide column">
+						<div class="ui teal progress">
 							<div class="bar"></div>
 						</div>
-			      	</div>
-			    </div>
+					</div>
+				</div>
 
 			</div>
 
 			<div class="column">
 				<!-- HTML -->
 				<div class="ui grid">
-			      	<div class="four wide column">
-			      		HTML
-			      	</div>
+					<div class="four wide column">
+						HTML
+					</div>
 
-			      	<div class="twelve wide column">
-			      		<div class="ui teal progress">
+					<div class="twelve wide column">
+						<div class="ui teal progress">
 							<div class="bar"></div>
 						</div>
-			      	</div>
-			    </div>
+					</div>
+				</div>
 
 				<!-- CSS -->
 				<div class="ui grid">
-			      	<div class="four wide column">
-			      		CSS
-			      	</div>
+					<div class="four wide column">
+						CSS
+					</div>
 
-			      	<div class="twelve wide column">
-			      		<div class="ui teal progress">
+					<div class="twelve wide column">
+						<div class="ui teal progress">
 							<div class="bar"></div>
 						</div>
-			      	</div>
-			    </div>
+					</div>
+				</div>
 
 				<!-- Javascript -->
 				<div class="ui grid">
-			      	<div class="four wide column">
-			      		Javascript
-			      	</div>
+					<div class="four wide column">
+						Javascript
+					</div>
 
-			      	<div class="twelve wide column">
-			      		<div class="ui teal progress">
+					<div class="twelve wide column">
+						<div class="ui teal progress">
 							<div class="bar"></div>
 						</div>
-			      	</div>
-			    </div>
+					</div>
+				</div>
 
 				<!-- Emberjs -->
 				<div class="ui grid">
-			      	<div class="four wide column">
-			      		Emberjs
-			      	</div>
+					<div class="four wide column">
+						Emberjs
+					</div>
 
-			      	<div class="twelve wide column">
-			      		<div class="ui teal progress">
+					<div class="twelve wide column">
+						<div class="ui teal progress">
 							<div class="bar"></div>
 						</div>
-			      	</div>
-			    </div>
+					</div>
+				</div>
 			</div>
 		</div>		
 	</section>
@@ -192,24 +192,30 @@
 		<div class="ui equal width grid">
 			<div class="column teal">
 				<h1 class="contact-header">Resume</h1>
-
+				<div class="ui icon button">
+					<i class="massive cloud download icon"></i>
+				</div>
+				<h2>Download</h2>
 			</div>
 			<div class="column green">
-		  		<h1 class="contact-header">Contact Me</h1>
-		  		<form class="ui form">
-				  <div class="field">
-				    <label>Name</label>
-				    <input type="text" name="name" placeholder="Your name">
-				  </div>
-				  <div class="field">
-				    <label>Email</label>
-				    <input type="email" name="email" placeholder="Your email">
-				  </div>
-				  <div class="field">
-				  	<label>Message</label>
-				  	<textarea rows="2" placeholder="Your message."></textarea>
-				  </div>
-				  <button class="ui button" type="submit">Submit</button>
+				<h1 class="contact-header">Contact Me</h1>
+				<form class="ui form">
+					<div class="no-center">
+						<div class="field">
+							<label>Name</label>
+							<input type="text" name="name" placeholder="Your name">
+						</div>
+						<div class="field">
+							<label>Email</label>
+							<input type="email" name="email" placeholder="Your email">
+						</div>
+						<div class="field">
+							<label>Message</label>
+							<textarea rows="2" placeholder="Your message."></textarea>
+						</div>
+					</div>
+					<br>
+					<button class="ui button" type="submit">Submit</button>
 				</form>
 			</div>
 		</div>
