Added Skills content

--- a/index.html
+++ b/index.html
@@ -147,20 +147,7 @@
 					</div>
 
 					<div class="twelve wide column">
-						<div class="ui teal progress">
-							<div class="bar"></div>
-						</div>
-					</div>
-				</div>
-
-				<!-- CSS -->
-				<div class="ui grid">
-					<div class="four wide column">
-						CSS
-					</div>
-
-					<div class="twelve wide column">
-						<div class="ui teal progress">
+						<div class="ui red active progress" data-percent="99" id="skill-html">
 							<div class="bar"></div>
 						</div>
 					</div>
@@ -173,7 +160,7 @@
 					</div>
 
 					<div class="twelve wide column">
-						<div class="ui teal progress">
+						<div class="ui green active progress" data-percent="85" id="skill-js">
 							<div class="bar"></div>
 						</div>
 					</div>
@@ -186,7 +173,20 @@
 					</div>
 
 					<div class="twelve wide column">
-						<div class="ui teal progress">
+						<div class="ui orange active progress" data-percent="75" id="skill-emberjs">
+							<div class="bar"></div>
+						</div>
+					</div>
+				</div>
+
+				<!-- CSS -->
+				<div class="ui grid">
+					<div class="four wide column">
+						CSS
+					</div>
+
+					<div class="twelve wide column">
+						<div class="ui blue active progress" data-percent="45" id="skill-css">
 							<div class="bar"></div>
 						</div>
 					</div>
@@ -195,59 +195,62 @@
 			</div>
 
 			<div class="column">
-				<!-- HTML -->
+				<!-- Java -->
 				<div class="ui grid">
 					<div class="four wide column">
-						HTML
+						Java
 					</div>
 
 					<div class="twelve wide column">
-						<div class="ui teal progress">
+						<div class="ui purple active progress" data-percent="65" id="skill-java">
 							<div class="bar"></div>
 						</div>
 					</div>
 				</div>
 
-				<!-- CSS -->
+				<!-- VBA -->
 				<div class="ui grid">
 					<div class="four wide column">
-						CSS
+						Visual Basic
 					</div>
 
 					<div class="twelve wide column">
-						<div class="ui teal progress">
+						<div class="ui pink active progress" data-percent="60" id="skill-vba">
 							<div class="bar"></div>
 						</div>
 					</div>
 				</div>
 
-				<!-- Javascript -->
+				<!-- Photoshop -->
 				<div class="ui grid">
 					<div class="four wide column">
-						Javascript
+						Photoshop
 					</div>
 
 					<div class="twelve wide column">
-						<div class="ui teal progress">
+						<div class="ui violet active progress" data-percent="55" id="skill-photoshop">
 							<div class="bar"></div>
 						</div>
 					</div>
 				</div>
 
-				<!-- Emberjs -->
+				<!-- Linux -->
 				<div class="ui grid">
 					<div class="four wide column">
-						Emberjs
+						Linux
 					</div>
 
 					<div class="twelve wide column">
-						<div class="ui teal progress">
+						<div class="ui black active progress" data-percent="30" id="skill-linux">
 							<div class="bar"></div>
 						</div>
 					</div>
 				</div>
+
 			</div>
 		</div>		
+
+		<br>
 	</section>
 
 	<!-- About -->
