Added and changed content

--- a/index.html
+++ b/index.html
@@ -1,134 +1,137 @@
-	<head>
-		<script
-		src="https://code.jquery.com/jquery-3.1.1.min.js"
-		integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-		crossorigin="anonymous"></script>
+<head>
 
-		<link rel="stylesheet" type="text/css" href="animate.css">
-		<link rel="stylesheet" type="text/css" href="style.css">
-		<link rel="stylesheet" type="text/css" href="semantic.css">
-		<link rel="stylesheet" type="text/css" href="semantic.min.css">
+	<title>Justin Punzalan</title>
+
+	<script
+	src="https://code.jquery.com/jquery-3.1.1.min.js"
+	integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+	crossorigin="anonymous"></script>
+
+	<link rel="stylesheet" type="text/css" href="animate.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="semantic.css">
+	<link rel="stylesheet" type="text/css" href="semantic.min.css">
+	
+	<script
+	src="https://code.jquery.com/jquery-3.1.1.min.js"
+	integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+	crossorigin="anonymous"></script>
+
+	<script src="semantic.min.js"></script>
+	<script src="script.js"></script>
+</head>
+
+<body>
+	
+	<!-- Header -->
+	<section class="ui center aligned segment header-holder no-border-view fadeInDown animated">
+
+		<h1 class="header-hello-large-text">Hello I'm</h1>
+		<h1 class="header-name-large-text">Justin Punzalan.</h1>
+
+
+		<h3>Frontend Web Developer / Sofware Engineer</h3>
+		<p><a class="scroll" target="resume">My Resume</a></p>
 		
-		<script
-		src="https://code.jquery.com/jquery-3.1.1.min.js"
-		integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-		crossorigin="anonymous"></script>
-
-		<script src="semantic.min.js"></script>
-		<script src="script.js"></script>
-	</head>
-
-	<body>
+		<a class="lower-button scroll" target="who-am-i"><i class="huge double angle down icon lower-button"></i></a>
 		
-		<!-- Header -->
-		<section class="ui center aligned segment header-holder no-border-view fadeInDown animated">
 
-			<h1 class="header-hello-large-text">Hello I'm</h1>
-			<h1 class="header-name-large-text">Justin Punzalan.</h1>
+	</section>
 
+	<!-- Who I Am -->
+	<section id="who-am-i" class="ui center aligned segment no-border-view temp-background fadeInDown animated">
 
-			<h3>Frontend Web Developer / Sofware Engineer</h3>
-			<p><a class="scroll" target="resume">My Resume</a></p>
-			
-			<a class="lower-button scroll" target="who-am-i"><i class="huge double angle down icon lower-button"></i></a>
-			
+		<h1 class="section-header">Fun Facts</h1>
 
-		</section>
-
-		<!-- Who I Am -->
-		<section id="who-am-i" class="ui center aligned segment no-border-view temp-background fadeInDown animated">
-
-			<h1 class="section-header">Fun Facts</h1>
-
-			<div class="ui equal width grid container">
-				<div class="column">
-					<div class="ui link cards">	
-						<div class="card">
-							<div class="image">
-								<img src="http://www.freevectors.net/files/large/FlatBlueRobotVectorIllustration.jpg">
+		<div class="ui equal width grid container">
+			<div class="column">
+				<div class="ui link cards">	
+					<div class="card">
+						<div class="image">
+							<img src="http://www.freevectors.net/files/large/FlatBlueRobotVectorIllustration.jpg">
+						</div>
+						<div class="content ui left aligned">
+							<div class="header">FIRST Robotics Mentor</div>
+							<div class="meta">
+								<a>Team 4 ELEMENT</a>
 							</div>
-							<div class="content ui left aligned">
-								<div class="header">FIRST Robotics Mentor</div>
-								<div class="meta">
-									<a>Team 4 ELEMENT</a>
-								</div>
-								<div class="description">
-									Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.
-								</div>
+							<div class="description">
+								Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.
 							</div>
-							<div class="extra content">
-								<span class="right floated">
-									Joined in 2015
-								</span>
-								<span>
-									<i class="marker icon"></i>
-									Van Nuys
-								</span>
-							</div>
+						</div>
+						<div class="extra content">
+							<span class="right floated">
+								Joined in 2015
+							</span>
+							<span>
+								<i class="marker icon"></i>
+								Van Nuys
+							</span>
 						</div>
 					</div>
 				</div>
+			</div>
 
-				<div class="column">
-					<div class="ui link cards">	
-						<div class="card">
-							<div class="image">
-								<img src="http://cache2.asset-cache.net/xc/485116622.jpg?v=2&c=IWSAsset&k=2&d=fe6KlDvUxA5-joS8vpa38aqSEHc4JacgMc10qdqFSaWfK1xtetUT_yUyEanznjHD0" height="120%">
+			<div class="column">
+				<div class="ui link cards">	
+					<div class="card">
+						<div class="image">
+							<img src="http://cache2.asset-cache.net/xc/485116622.jpg?v=2&c=IWSAsset&k=2&d=fe6KlDvUxA5-joS8vpa38aqSEHc4JacgMc10qdqFSaWfK1xtetUT_yUyEanznjHD0" height="120%">
+						</div>
+						<div class="content ui left aligned">
+							<div class="header">Web Developer</div>
+							<div class="meta">
+								<span class="date">Recent - TakeSessions</span>
 							</div>
-							<div class="content ui left aligned">
-								<div class="header">Web Developer</div>
-								<div class="meta">
-									<span class="date">Recent - TakeSessions</span>
-								</div>
-								<div class="description">
-									Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.
-								</div>
+							<div class="description">
+								Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.
 							</div>
-							<div class="extra content">
-								<span class="right floated">
-									Started in 2015
-								</span>
-								<span>
-									<i class="user icon"></i>
-									Front End
-								</span>
-							</div>
+						</div>
+						<div class="extra content">
+							<span class="right floated">
+								Started in 2015
+							</span>
+							<span>
+								<i class="user icon"></i>
+								Front End
+							</span>
 						</div>
 					</div>
 				</div>
+			</div>
 
-				<div class="column">
-					<div class="ui link cards">	
-						<div class="card">
-							<div class="image">
-								<img src="https://static-cdn.jtvnw.net/jtv_user_pictures/mlh-profile_image-8393427ef5db952e-300x300.png">
+			<div class="column">
+				<div class="ui link cards">	
+					<div class="card">
+						<div class="image">
+							<img src="https://static-cdn.jtvnw.net/jtv_user_pictures/mlh-profile_image-8393427ef5db952e-300x300.png">
+						</div>
+						<div class="content ui left aligned">
+							<div class="header">Frequent Hackathon Attendee</div>
+							<div class="meta">
+								<a>7 Hackathons Attended</a>
 							</div>
-							<div class="content ui left aligned">
-								<div class="header">Frequent Hackathon Attendee</div>
-								<div class="meta">
-									<a>7 Hackathons Attended</a>
-								</div>
-								<div class="description">
-									Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.
-								</div>
+							<div class="description">
+								Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.
 							</div>
-							<div class="extra content">
-								<span class="right floated">
-									Competing since 2015
-								</span>
-								<span>
-									<i class="trophy icon"></i>
-									3 Awards
-								</span>
-							</div>
+						</div>
+						<div class="extra content">
+							<span class="right floated">
+								Competing since 2015
+							</span>
+							<span>
+								<i class="trophy icon"></i>
+								3 Awards
+							</span>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
+	</div>
 
-		<br>
-		<br>
+	<br>
+	<br>
 
 	</section>
 
@@ -258,8 +261,18 @@
 
 		<h1 class="section-header">About Me</h1>
 
-		<div class="ui container">
-			<p class="bio-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<div class="ui grid container">
+			
+			<div class="four wide column">
+				<img class="ui medium circular image" src="https://scontent-lax3-1.xx.fbcdn.net/v/t1.0-9/12705613_1130747370293328_530267117174938933_n.jpg?oh=e3ae76f81a8450ef24d1bcfced755fea&oe=58E4311D">
+			</div>
+
+			<div class="twelve wide column">
+				<div class="ui container left aligned">
+					<p class="bio-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				</div>
+			</div>
+
 		</div>
 
 		<br>
@@ -268,40 +281,41 @@
 	<!-- Resume/Contact -->
 	<section id="resume" class="ui center aligned segment no-border-view">
 		<div class="ui equal width grid">
-			<div class="column teal">
-				<h1 class="contact-header">Resume</h1>
-				<div class="ui icon button">
-					<i class="massive cloud download icon"></i>
-				</div>
-				<h2>Download</h2>
+		<div class="column blue">
+			<h1 class="contact-header">My Resume</h1>
+			<br>
+			<div class="ui icon button">
+				<i class="massive download icon"></i>
 			</div>
-			<div class="column green">
-				<h1 class="contact-header">Contact Me</h1>
-				<form class="ui form">
-					<div class="no-center">
-						<div class="field">
-							<label>Name</label>
-							<input type="text" name="name" placeholder="Your name">
-						</div>
-						<div class="field">
-							<label>Email</label>
-							<input type="email" name="email" placeholder="Your email">
-						</div>
-						<div class="field">
-							<label>Message</label>
-							<textarea rows="2" placeholder="Your message."></textarea>
-						</div>
-					</div>
-					<br>
-					<button class="ui button" type="submit">Submit</button>
-				</form>
-			</div>
+			<h2>Want to know even more about me? Check out my resume or shoot me an email. </h2>
 		</div>
+		<div class="column yellow">
+			<h1 class="contact-header">Contact Me</h1>
+			<form class="ui form">
+				<div class="no-center">
+					<div class="field">
+						<label>Name</label>
+						<input type="text" name="name" placeholder="Your name">
+					</div>
+					<div class="field">
+						<label>Email</label>
+						<input type="email" name="email" placeholder="Your email">
+					</div>
+					<div class="field">
+						<label>Message</label>
+						<textarea rows="2" placeholder="Your message."></textarea>
+					</div>
+				</div>
+				<br>
+				<button class="ui button" type="submit">Submit</button>
+			</form>
+		</div>
+	</div>
 	</section>
 
-	<!-- Footer -->
-	<footer>
+<!-- Footer -->
+<footer>
 
-	</footer>
+</footer>
 
 </body>
