Added Footer and modified temp content

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 	</section>
 
 	<!-- About -->
-	<section class="ui center aligned segment no-border-view temp-background fadeInDown animated">
+	<section class="ui center aligned segment no-border-view temp-background fadeInDown animated no-bottom-padding-margin">
 
 		<h1 class="section-header">About Me</h1>
 
@@ -276,10 +276,12 @@
 		</div>
 
 		<br>
+		<br>
+		<br>
 	</section>
 
 	<!-- Resume/Contact -->
-	<section id="resume" class="ui center aligned segment no-border-view">
+	<section id="resume" class="ui center aligned segment no-border-view no-top-padding-margin no-bottom-padding-margin">
 		<div class="ui equal width grid">
 		<div class="column blue">
 			<h1 class="contact-header">My Resume</h1>
@@ -289,7 +291,7 @@
 			</div>
 			<h2>Want to know even more about me? Check out my resume or shoot me an email. </h2>
 		</div>
-		<div class="column yellow">
+		<div class="column teal">
 			<h1 class="contact-header">Contact Me</h1>
 			<form class="ui form">
 				<div class="no-center">
@@ -313,9 +315,12 @@
 	</div>
 	</section>
 
-<!-- Footer -->
-<footer>
+	<!-- Footer -->
+	<section class="ui center aligned segment no-border-view footer-background">
+		<p class="footer-text">Designed and developed by Justin Punzalan © 2016</p>
+		<a href="https://github.com/justAdevTV" target="_blank"><i class="big github icon"></i></a>
+		<a href="#"><i class="big linkedin square icon"></i></a>
+	</section>
 
-</footer>
 
 </body>
