--- a/index.html
+++ b/index.html
@@ -31,8 +31,16 @@
 
 
 		<h3>Frontend Web Developer / Sofware Engineer</h3>
-		<p><a class="scroll" target="resume">My Resume</a></p>
+
+		<div class="ui horizontal bulleted link list">
+			<a class="item scroll" target="who-am-i">Activities</a>
+			<a class="item scroll" target="skills">Skills</a>
+			<a class="item scroll" target="bio">Bio</a>
+			<a class="item scroll" target="resume">Contact</a>
+		</div>
 		
+		<br>
+
 		<a class="lower-button scroll" target="who-am-i"><i class="huge double angle down icon lower-button"></i></a>
 		
 
@@ -136,7 +144,7 @@
 	</section>
 
 	<!-- Skills -->
-	<section class="ui center aligned segment no-border-view fadeInDown animated">
+	<section class="ui center aligned segment no-border-view fadeInDown animated" id="skills">
 
 		<h1 class="section-header">Skills</h1>
 
@@ -257,7 +265,7 @@
 	</section>
 
 	<!-- About -->
-	<section class="ui center aligned segment no-border-view temp-background fadeInDown animated no-bottom-padding-margin">
+	<section class="ui center aligned segment no-border-view temp-background fadeInDown animated no-bottom-padding-margin" id="bio">
 
 		<h1 class="section-header">About Me</h1>
 
