Fixed Activity Formatting

--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
 	<!-- Who I Am -->
 	<section id="who-am-i" class="ui center aligned segment no-border-view temp-background fadeInDown animated">
 
-		<h1 class="section-header">Fun Facts</h1>
+		<h1 class="section-header">Activities</h1>
 
 		<div class="ui equal width grid container">
 			<div class="column">
-				<div class="ui link cards">	
+				<div class="ui link cards centered">	
 					<div class="card">
 						<div class="image">
 							<img src="http://www.freevectors.net/files/large/FlatBlueRobotVectorIllustration.jpg">
@@ -81,7 +81,7 @@
 			</div>
 
 			<div class="column">
-				<div class="ui link cards">	
+				<div class="ui link cards centered">	
 					<div class="card">
 						<div class="image">
 							<img src="http://cache2.asset-cache.net/xc/485116622.jpg?v=2&c=IWSAsset&k=2&d=fe6KlDvUxA5-joS8vpa38aqSEHc4JacgMc10qdqFSaWfK1xtetUT_yUyEanznjHD0" height="120%">
@@ -109,7 +109,7 @@
 			</div>
 
 			<div class="column">
-				<div class="ui link cards">	
+				<div class="ui link cards centered">	
 					<div class="card">
 						<div class="image">
 							<img src="https://static-cdn.jtvnw.net/jtv_user_pictures/mlh-profile_image-8393427ef5db952e-300x300.png">
