--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 
 	<title>Justin Punzalan</title>
 
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+
 	<script
 	src="https://code.jquery.com/jquery-3.1.1.min.js"
 	integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
@@ -22,7 +24,7 @@
 </head>
 
 <body>
-	
+
 	<!-- Header -->
 	<section class="ui center aligned segment header-holder no-border-view fadeInDown animated">
 
@@ -51,7 +53,7 @@
 
 		<h1 class="section-header">Activities</h1>
 
-		<div class="ui equal width grid container">
+		<div class="ui stackable equal width grid container">
 			<div class="column">
 				<div class="ui link cards centered">	
 					<div class="card">
@@ -136,10 +138,9 @@
 				</div>
 			</div>
 		</div>
-	</div>
 
-	<br>
-	<br>
+		<br>
+		<br>
 
 	</section>
 
@@ -148,7 +149,7 @@
 
 		<h1 class="section-header">Skills</h1>
 
-		<div class="ui equal width grid container">
+		<div class="ui stackable two column grid container">
 			<div class="column">
 
 				<!-- HTML -->
@@ -269,8 +270,8 @@
 
 		<h1 class="section-header">About Me</h1>
 
-		<div class="ui grid container">
-			
+		<div class="ui stackable column grid container">
+
 			<div class="four wide column">
 				<img class="ui medium circular image" src="https://scontent-lax3-1.xx.fbcdn.net/v/t1.0-9/12705613_1130747370293328_530267117174938933_n.jpg?oh=e3ae76f81a8450ef24d1bcfced755fea&oe=58E4311D">
 			</div>
@@ -290,37 +291,37 @@
 
 	<!-- Resume/Contact -->
 	<section id="resume" class="ui center aligned segment no-border-view no-top-padding-margin no-bottom-padding-margin">
-		<div class="ui equal width grid">
-		<div class="column blue">
-			<h1 class="contact-header">My Resume</h1>
-			<br>
-			<div class="ui icon button">
-				<i class="massive download icon"></i>
-			</div>
-			<h2>Want to know even more about me? Check out my resume or shoot me an email. </h2>
-		</div>
-		<div class="column teal">
-			<h1 class="contact-header">Contact Me</h1>
-			<form class="ui form">
-				<div class="no-center">
-					<div class="field">
-						<label>Name</label>
-						<input type="text" name="name" placeholder="Your name">
-					</div>
-					<div class="field">
-						<label>Email</label>
-						<input type="email" name="email" placeholder="Your email">
-					</div>
-					<div class="field">
-						<label>Message</label>
-						<textarea rows="2" placeholder="Your message."></textarea>
-					</div>
-				</div>
+		<div class="ui equal width grid stackable">
+			<div class="column blue">
+				<h1 class="contact-header">My Resume</h1>
 				<br>
-				<button class="ui button" type="submit">Submit</button>
-			</form>
+				<div class="ui icon button">
+					<i class="massive download icon"></i>
+				</div>
+				<h2>Want to know even more about me? Check out my resume or shoot me an email. </h2>
+			</div>
+			<div class="column teal">
+				<h1 class="contact-header">Contact Me</h1>
+				<form class="ui form">
+					<div class="no-center">
+						<div class="field">
+							<label>Name</label>
+							<input type="text" name="name" placeholder="Your name">
+						</div>
+						<div class="field">
+							<label>Email</label>
+							<input type="email" name="email" placeholder="Your email">
+						</div>
+						<div class="field">
+							<label>Message</label>
+							<textarea rows="2" placeholder="Your message."></textarea>
+						</div>
+					</div>
+					<br>
+					<button class="ui button" type="submit">Submit</button>
+				</form>
+			</div>
 		</div>
-	</div>
 	</section>
 
 	<!-- Footer -->
@@ -329,6 +330,5 @@
 		<a href="https://github.com/justAdevTV" target="_blank"><i class="big github icon"></i></a>
 		<a href="#"><i class="big linkedin square icon"></i></a>
 	</section>
-
 
 </body>
