Added Animation to Cards

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
 
 	<!-- Header -->
-	<section class="ui center aligned segment header-holder no-border-view fadeInDown animated">
+	<section class="ui center aligned segment header-holder no-border-view" id="header">
 
 		<h1 class="header-hello-large-text">Hello I'm</h1>
 		<h1 class="header-name-large-text">Justin Punzalan.</h1>
@@ -49,14 +49,14 @@
 	</section>
 
 	<!-- Who I Am -->
-	<section id="who-am-i" class="ui center aligned segment no-border-view temp-background fadeInDown animated">
+	<section id="who-am-i" class="ui center aligned segment no-border-view temp-background">
 
 		<h1 class="section-header">Activities</h1>
 
 		<div class="ui stackable equal width grid container">
 			<div class="column">
 				<div class="ui link cards centered">	
-					<div class="card">
+					<div class="card" id="card-robot">
 						<div class="image">
 							<img src="http://www.freevectors.net/files/large/FlatBlueRobotVectorIllustration.jpg">
 						</div>
@@ -84,7 +84,7 @@
 
 			<div class="column">
 				<div class="ui link cards centered">	
-					<div class="card">
+					<div class="card" id="card-web">
 						<div class="image">
 							<img src="http://cache2.asset-cache.net/xc/485116622.jpg?v=2&c=IWSAsset&k=2&d=fe6KlDvUxA5-joS8vpa38aqSEHc4JacgMc10qdqFSaWfK1xtetUT_yUyEanznjHD0" height="120%">
 						</div>
@@ -112,7 +112,7 @@
 
 			<div class="column">
 				<div class="ui link cards centered">	
-					<div class="card">
+					<div class="card" id="card-hack">
 						<div class="image">
 							<img src="https://static-cdn.jtvnw.net/jtv_user_pictures/mlh-profile_image-8393427ef5db952e-300x300.png">
 						</div>
@@ -145,7 +145,7 @@
 	</section>
 
 	<!-- Skills -->
-	<section class="ui center aligned segment no-border-view fadeInDown animated" id="skills">
+	<section class="ui center aligned segment no-border-view" id="skills">
 
 		<h1 class="section-header">Skills</h1>
 
@@ -266,7 +266,7 @@
 	</section>
 
 	<!-- About -->
-	<section class="ui center aligned segment no-border-view temp-background fadeInDown animated no-bottom-padding-margin" id="bio">
+	<section class="ui center aligned segment no-border-view temp-background no-bottom-padding-margin" id="bio">
 
 		<h1 class="section-header">About Me</h1>
 
@@ -290,9 +290,9 @@
 	</section>
 
 	<!-- Resume/Contact -->
-	<section id="resume" class="ui center aligned segment no-border-view no-top-padding-margin no-bottom-padding-margin">
+	<section class="ui center aligned segment no-border-view no-top-padding-margin no-bottom-padding-margin">
 		<div class="ui equal width grid stackable">
-			<div class="column blue">
+			<div class="column blue" id="resume">
 				<h1 class="contact-header">My Resume</h1>
 				<br>
 				<div class="ui icon button">
@@ -300,7 +300,7 @@
 				</div>
 				<h2>Want to know even more about me? Check out my resume or shoot me an email. </h2>
 			</div>
-			<div class="column teal">
+			<div class="column teal" id="contact">
 				<h1 class="contact-header">Contact Me</h1>
 				<form class="ui form">
 					<div class="no-center">
