Added Resume Link

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 				<h1 class="contact-header">My Resume</h1>
 				<br>
 				<div class="ui icon button">
-					<i class="massive download icon"></i>
+					<a href="Punzalan_Justin_Resume_2016.pdf" download><i class="massive download icon"></i></a>
 				</div>
 				<h2>Want to know even more about me? Check out my resume or shoot me an email. </h2>
 			</div>
