--- a/index.html
+++ b/index.html
@@ -302,19 +302,19 @@
 			</div>
 			<div class="column teal" id="contact">
 				<h1 class="contact-header">Contact Me</h1>
-				<form class="ui form">
+				<form class="ui form" method="POST" action="http://formspree.io/justpunz@live.com">
 					<div class="no-center">
 						<div class="field">
 							<label>Name</label>
-							<input type="text" name="name" placeholder="Your name">
+							<input type="text" name="name" placeholder="Your name" required>
 						</div>
 						<div class="field">
 							<label>Email</label>
-							<input type="email" name="email" placeholder="Your email">
+							<input type="email" name="email" placeholder="Your email" required>
 						</div>
 						<div class="field">
 							<label>Message</label>
-							<textarea rows="2" placeholder="Your message."></textarea>
+							<textarea rows="2" name="message" placeholder="Your message." required></textarea>
 						</div>
 					</div>
 					<br>
