--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 			</div>
 			<div class="column teal" id="contact">
 				<h1 class="contact-header">Contact Me</h1>
-				<form class="ui form" method="POST" action="http://formspree.io/justpunz@live.com">
+				<form class="ui form" method="POST" action="https://formspree.io/justpunz@live.com">
 					<div class="no-center">
 						<div class="field">
 							<label>Name</label>
