--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <head>
 
 	<title>Justin Punzalan</title>
+	<link rel="icon" type="image/png" href="icon.png">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
@@ -26,7 +27,7 @@
 <body>
 
 	<!-- Header -->
-	<section class="ui center aligned segment header-holder no-border-view" id="header">
+	<section class="ui center aligned segment header-holder no-border-view fadeInDown animated" id="header">
 
 		<h1 class="header-hello-large-text">Hello I'm</h1>
 		<h1 class="header-name-large-text">Justin Punzalan.</h1>
