Changed Form Look

--- a/index.html
+++ b/index.html
@@ -301,25 +301,25 @@
 				</div>
 				<h2>Want to know even more about me? Check out my resume or shoot me an email. </h2>
 			</div>
-			<div class="column teal" id="contact">
+			<div class="column grey" id="contact">
 				<h1 class="contact-header">Contact Me</h1>
 				<form class="ui form" method="POST" action="https://formspree.io/justpunz@live.com">
 					<div class="no-center">
-						<div class="field">
-							<label>Name</label>
-							<input type="text" name="name" placeholder="Your name" required>
+						<div class="ui fluid big icon input field">
+						  <input type="text" placeholder="Your Name" required>
+						  <i class="student icon"></i>
 						</div>
-						<div class="field">
-							<label>Email</label>
-							<input type="email" name="email" placeholder="Your email" required>
+						<div class="ui fluid big icon input field">
+						  <input type="email" name="email" placeholder="Your email" required>
+						  <i class="mail icon"></i>
 						</div>
-						<div class="field">
-							<label>Message</label>
+						<div class="ui fluid big icon input field">
+							<i class="write icon"></i>
 							<textarea rows="2" name="message" placeholder="Your message." required></textarea>
 						</div>
 					</div>
 					<br>
-					<button class="ui button" type="submit">Submit</button>
+					<button class="ui button large" type="submit">Submit</button>
 				</form>
 			</div>
 		</div>
