Changed Resume Text Formatting

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 	</section>
 
 	<!-- Resume/Contact -->
-	<section class="ui center aligned segment no-border-view no-top-padding-margin no-bottom-padding-margin">
+	<section class="ui center aligned segment no-border-view no-top-padding-margin no-bottom-padding-margin no-padding-mobile">
 		<div class="ui equal width grid stackable">
 			<div class="column blue" id="resume">
 				<h1 class="contact-header">My Resume</h1>
@@ -299,7 +299,9 @@
 				<div class="ui icon button">
 					<a href="Punzalan_Justin_Resume_2016.pdf" download><i class="massive download icon"></i></a>
 				</div>
-				<h2>Want to know even more about me? Check out my resume or shoot me an email. </h2>
+				<h2 class="resume-text-padding " style="padding-left: 8rem; padding-right: 8rem;">
+					Want to know even more about me? Check out my resume or shoot me an email.
+				</h2>
 			</div>
 			<div class="column grey" id="contact">
 				<h1 class="contact-header">Contact Me</h1>
