Changed Header Formatting

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 	<!-- Header -->
 	<section class="ui center aligned segment header-holder no-border-view fadeInDown animated" id="header">
 
-		<h1 class="header-hello-large-text">Hello I'm</h1>
+		<h1 class="header-hello-large-text">Hello, I'm</h1>
 		<h1 class="header-name-large-text">Justin Punzalan.</h1>
 
 
-		<h3>Frontend Web Developer / Sofware Engineer</h3>
+		<h3 class="header-description-text">Frontend Web Developer / Sofware Engineer</h3>
 
-		<div class="ui horizontal bulleted link list">
+		<div class="ui horizontal bulleted link list header-list-text">
 			<a class="item scroll" target="who-am-i">Activities</a>
 			<a class="item scroll" target="skills">Skills</a>
 			<a class="item scroll" target="bio">Bio</a>
