--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<h1 class="header-name-large-text">Justin Punzalan.</h1>
 
 
-		<h3 class="header-description-text">Frontend Web Developer / Sofware Engineer</h3>
+		<h3 class="header-description-text">Frontend Web Developer | Sofware Engineer</h3>
 
 		<div class="ui horizontal bulleted link list header-list-text">
 			<a class="item scroll" target="who-am-i">Activities</a>
@@ -305,6 +305,7 @@
 			</div>
 			<div class="column grey" id="contact">
 				<h1 class="contact-header">Contact Me</h1>
+				<br>
 				<form class="ui form" method="POST" action="https://formspree.io/justpunz@live.com">
 					<div class="no-center">
 						<div class="ui fluid big icon input field">
